2000-05-18  Karl Eichwalder  <ke@suse.de>

	* panel.hints: Improve "de" entries.
	* panel.hints: More sorting.  Remove a doublette.  Add german
	translations.

2000-05-17  Karl Eichwalder  <ke@suse.de>

	* panel.hints: Add some German translations and do sorting; one
	English entry was lost ;-)

2000-05-15  Alexander Kirillov  <kirillov@math.sunysb.edu>

	* panel/help/C/panel.sgml: updated trademark info, version number;
	added reference to GPL license. Updated "global panel prefs" to
	describe new "prelight button" option. 

2000-05-15  Dan Mueth <d-mueth@uchicago.edu>

	* panel/help/C/panel.sgml: Edited Special Panel Objects and 
	  Adding, Moving, and Removing Panel Objects.

2000-05-14  Dan Mueth <d-mueth@uchicago.edu>

	* panel/help/C/panel.sgml: Edited Applets, Drawers, and part of
	  Special Panel Objects sections.

	* panel/help/C/figures/panel_swallow.png: updated screenshot

2000-05-14  Karl Eichwalder  <ke@suse.de>

	* gnome-panel-properties.desktop (Name): Sort alphabetically.  Add
	de.

Sun May 14 03:06:30 2000  George Lebl <jirka@5z.com>

	* applet-widget.c: an extra sanity check for shlib applets, and
	  minor doc update

	* panel.c:  Signal connection fixed up.  No longer connect basep
	  signals on a per type basis as it can change.  So connect to
	  a single handler which just runs the correct thing for the correct
	  panel type.

	* panel_config.c: setup defaults for the per type ppc stuff.  So
	  that there are legal values when changing type

Fri May 12 15:07:34 2000  George Lebl <jirka@5z.com>

	* xstuff.c: setup a dnd proxy for the swallowed KDE docklets

2000-05-11  Dan Mueth <d-mueth@uchicago.edu>

	* panel/help/C/panel.sgml: Edited Launchers section.

2000-05-11  Dan Mueth <d-mueth@uchicago.edu>

	* panel/help/C/figures/glob_pref_anim.png: updated screenshot
	* panel/help/C/figures/create_launcher.png: updated screenshot

Thu May 11 18:50:16 2000  George Lebl <jirka@5z.com>

	* menu.c: use -lock for xscreensaver always
